Replaced the text wio with break tag

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                     </a>
                                     <h4>Technical lead</h4>
                                  </div>
-                                 <p style="text-align: center">Working as a front end lead for the product Wio
+                                 <p style="text-align: center">Working as a front end lead for the product<br/>
                                     <a class="img" href="https://wiowireless.com/" target="_blank" title="Wio Wireless">
                                     <img class="active" src="images/companies/wio.png">
                                     </a>
