Changed cv url and added skills for projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta name="theme-color" content="#ffffff">
       <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link rel="stylesheet" id="style-css" href="css/style.min.css?ver=0.0.1" type="text/css" media="all">
+      <link rel="stylesheet" id="style-css" href="css/style.css?ver=0.0.1" type="text/css" media="all">
       <link rel="stylesheet" id="theme-color-css" href="css/theme-color.css?ver=0.0.1" type="text/css" media="all">
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
@@ -161,8 +161,8 @@
                         </div>
                      </div>
                      <div class="section-txt-btn">
-                        <p><a class="btn btn-lg btn-border ripple" target="_blank" href="https://goo.gl/5bMTah">
-                           Download Resume						</a>
+                        <p>
+							<a class="btn btn-lg btn-border ripple" target="_blank" href="https://goo.gl/aKJrQd">Download Resume</a>
                         </p>
                         <p>Hello! I’m Santhosh. A Full stack developer mostly specialized in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, Typescript, ReactJS, ReactNative, Java, Android. Strong background in coding, leading and project management.</p>
                      </div>
@@ -465,6 +465,7 @@
                                     </a>
                                  </p>
                                  <p>Building the wio cloud central web application using react js and mobile application for the end users using react native.</p>
+								 <div class="skills"><span>Skills</span> - ReactJS, React Native</div>
                               </div>
                            </div>
                            <div class="timeline-box timeline-box-right" style="position: absolute; left: auto; right: 0px; top: 50px;">
@@ -479,7 +480,8 @@
                                     <h4>Assistant Manager</h4>
                                  </div>
                                  <p>In Renault Nissan Technology And Business Center India Ltd. I worked on the core development of connected cars (connected-mobility) sdk in android under the leadership of <a href="https://medium.com/@android2ee" target="_blank">Mathias Seguy</a> for the alliance-2022 (Renault-Nissan-Mitsubishi)</p>
-                              </div>
+								 <div class="skills"><span>Skills</span> - Android</div>
+							  </div>
                            </div>
                            <div class="timeline-box timeline-box-left" style="position: absolute; left: 0px; right: auto; top: 331px;">
                               <span class="dot"></span>
@@ -498,9 +500,11 @@
                                     </a>
                                  <p>
                                     <a href="https://www.youtube.com/watch?v=mmyZfXb2_TA" target="_blank">SmartD Business <i class="fab fa-youtube" style="color: red"></i></a> - A restaurant management system where the analytics, pos, table ordering system, reports that enables the merchants to make continues improvements to their business. 	
-                                 </p>
+									<div class="skills"><span>Skills</span> - Java, Android, ReactJS, Electron, Php</div>
+								 </p>
                                  <p><a href="https://play.google.com/store/apps/details?id=com.msf.smartD&hl=en" target="_blank">SmartD Foodie <i class="fab fa-google-play" style="color: #00F076"></i></a> - A restaurant discovery (including some food courts) and food ordering system.</p>
-                                 </p>
+									<div class="skills"><span>Skills</span> - Java, Android</div>
+								 </p>
                               </div>
                            </div>
                            <div class="timeline-box timeline-box-right" style="position: absolute; left: auto; right: 0px; top: 375px;">
@@ -515,6 +519,7 @@
                                     <h4>Java Software Engineer</h4>
                                  </div>
                                  <p>Worked on issues fixings in the financial product calypso software.</p>
+								 <div class="skills"><span>Skills</span> - Java</div>
                               </div>
                            </div>
                            <div class="timeline-box timeline-box-right" style="position: absolute; left: auto; right: 0px; top: 667px;">
@@ -535,11 +540,14 @@
                                  <p><a href="https://www.oakleafpartnership.com/salary-checker" target="_blank"  title="Human resources recruitment firm">Oakleaf Partnership Limited</a> We developed a responsive hr salary survey web pages for them.
                                     <br/><br/><a href="https://www.fiveguys.co.uk/contact"  target="_blank" title="Five Guys Burgers">Five Guys</a> Created contact web page, handled issues and handled admin permissions.
                                     <br/><br/>Boxpark : An e-commerce demo (web and mobile app) using magento framework
+									<div class="skills"><span>Skills</span> - Php, HTML, CSS, JS, Bootstrap, CodeIgniter, JQuery, Android, Magento</div>
                                  </p>
                                  <p style="text-align: center">Client - Two Pencils
                                  <hr>
                                  </p>
-                                 <p>Rp’s Nothing For A Pair UK : Game developed using apache cordova - I did inAppPurchase integration for this app</p>
+                                 <p>Rp’s Nothing For A Pair UK : Game developed using apache cordova - I did inAppPurchase integration for this app
+								 	<div class="skills"><span>Skills</span> - HTML, CSS, JS, Cordova Phonegap, Android</div>
+								 </p>
                               </div>
                            </div>
                         </div>
