--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta name="theme-color" content="#ffffff">
       <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link rel="stylesheet" id="style-css" href="css/style.css?ver=0.0.1" type="text/css" media="all">
+      <link rel="stylesheet" id="style-css" href="css/style.min.css?ver=0.0.2" type="text/css" media="all">
       <link rel="stylesheet" id="theme-color-css" href="css/theme-color.css?ver=0.0.1" type="text/css" media="all">
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
