--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="theme-color-07aaf5 light_skin mobile cssall cssgradients rgba opacity supports textshadow cssanimations bgrepeatround bgrepeatspace boxshadow csstransforms csstransforms3d csstransitions" style="">
+<html lang="en-US" class="theme-color-base light_skin mobile cssall cssgradients rgba opacity supports textshadow cssanimations bgrepeatround bgrepeatspace boxshadow csstransforms csstransforms3d csstransitions" style="">
    <head>
       <title>Profile</title>
       <meta charset="UTF-8">
@@ -16,7 +16,7 @@
       <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" id="style-css" href="css/style.min.css?ver=0.0.2" type="text/css" media="all">
-      <link rel="stylesheet" id="theme-color-css" href="css/theme-color.css?ver=0.0.1" type="text/css" media="all">
+      <link rel="stylesheet" id="theme-color-css" href="css/theme-color.css?ver=0.0.2" type="text/css" media="all">
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
       <script type="text/javascript" src="js/site.min.js?ver=1"></script>
@@ -125,7 +125,7 @@
                                        <span>I'm</span>
                                        Santhosh									
                                     </h1>
-                                    <h2 class="profile-position">Full stack developer</h2>
+                                    <h2 class="profile-position">Frontend Engineer</h2>
                                  </div>
                                  <ul class="profile-list">
                                     <li class="clearfix">
@@ -162,7 +162,7 @@
                      </div>
                      <div class="section-txt-btn">
                         <p>
-							<a class="btn btn-lg btn-border ripple" target="_blank" href="https://goo.gl/aKJrQd">Download Resume</a>
+							<a class="btn btn-lg btn-border ripple" target="_blank" href="https://goo.gl/6aZQJu">Download Resume</a>
                         </p>
                         <p>Hello! I’m Santhosh. A Full stack developer mostly specialized in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, Typescript, ReactJS, ReactNative, Java, Android. Strong background in coding, leading and project management.</p>
                      </div>
@@ -464,7 +464,7 @@
                                     <img class="active" src="images/companies/wio.png">
                                     </a>
                                  </p>
-                                 <p>Building the wio cloud central web application using react js and mobile application for the end users using react native.</p>
+                                 <p>Building the wio cloud central web application for administration and management in react js and mobile application for the end users in react native.<br/><br/>Defined clear development, vcs strategies, test automation and release management.</p>
 								 <div class="skills"><span>Skills</span> - ReactJS, React Native</div>
                               </div>
                            </div>
