Changed about me - a little

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <p>
 							<a class="btn btn-lg btn-border ripple" target="_blank" href="https://goo.gl/6aZQJu">Download Resume</a>
                         </p>
-                        <p>Hello! I’m Santhosh. A Full stack developer mostly specialized in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, Typescript, ReactJS, ReactNative, Java, Android. Strong background in coding, leading and project management.</p>
+                        <p>Hello viewer! I’m a full stack developer mostly specialized in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, Typescript, ReactJS, ReactNative, Java, Android. Strong background in coding, leading and project management.</p>
                      </div>
                   </div>
                </section>
