added awards card

--- a/index.html
+++ b/index.html
@@ -616,21 +616,21 @@
                      </div>
                   </div>
                </section>
-               <!-- section id="text_section" class="section section-text">
+               <section id="text_section" class="section section-text">
                   <div class="animate-up">
                      <h2 class="section-title">Awards and Achievements</h2>
                      <div class="section-box">
                         <div class="row">
                            <div class="col-sm-12">
                               <p></p>
-                              <h3>Cash Prize</h3>
-                              <p>Won cash prizes during app development competitions held within the teams in our organization.</p>
+                              <h3>Best Performer (2018 -2019)</h3>
+                              <p> Received spark award for work performance from Infinite Computer Solutions.</p>
                               <p></p>
                            </div>
                         </div>
                      </div>
                   </div>
-                  </section -->   
+                  </section>   
                <section id="interests" class="section section-interests">
                   <div class="animate-down">
                      <h2 class="section-title">My Interests</h2>
