Added design portfolio

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                  <h4 class="service-sub-title">Web, MobileApp, Desktop</h4>
                                  <div class="service-cont">
                                     <hr>
-                                    <p>Manual build distributions requires dependencies and manual efforts (again the regular routine). So i distribute builds by making use of some good build distribution too</p>
+                                    <p>I don't jump into code before deciding what we need to develop, i believe that quality of the development is about how we craft it. To achieve that i do continues code reviews, implement test cases and peer discussions.</p>
                                  </div>
                               </div>
                            </div>
@@ -288,7 +288,7 @@
                                  <h4 class="service-sub-title">Test, Build</h4>
                                  <div class="service-cont">
                                     <hr>
-                                    <p>Do some development, build, test, distribute the build (do it daily). Oh! why we need to do the same process daily? So i like to automate by scripting or with the help of good automation tools.</p>
+                                    <p>Do some development, build, test, distribute the build (do it daily). But why we need to do the same process daily? So i like to automate by scripting or with the help of automation tools.</p>
                                  </div>
                               </div>
                            </div>
@@ -299,7 +299,7 @@
                                  <h4 class="service-sub-title">Version Management & Distribution</h4>
                                  <div class="service-cont">
                                     <hr>
-                                    <p>Eczema can be a burden. It is a skin condition that can range in severity from dry, red patches on your skin to cracked, weeping sores. </p>
+                                    <p>Manual build distributions requires dependencies and manual efforts (again the regular routine). So i distribute builds by making use of stable build distribution tools. </p>
                                  </div>
                               </div>
                            </div>
@@ -315,6 +315,15 @@
                               </div>
                            </div>
                         </div>
+                     </div>
+                  </div>
+               </section>
+               <section id="design-works" class="section section-designWorks">
+                  <div class="animate-up">
+                     <h2 class="section-title">Design Works & Prototypes</h2>
+                     <div class="section-box">
+                        <h4 class="service-title" style="text-align: center; margin-bottom: 40px;">Office Transport Management</h4>
+                        <img src="images/design_works/design_work_tms.svg"/>
                      </div>
                   </div>
                </section>
@@ -364,9 +373,15 @@
                                  </a>	
                               </li>
                               <li>
-                                 <a href=" https://getbootstrap.com/" target="_blank">
+                                 <a href="https://getbootstrap.com/" target="_blank">
                                  <img src="images/tech_logos/bootstrap.png" />
                                  <span>Bootstrap</span>
+                                 </a>	
+                              </li>
+                              <li>
+                                 <a href="https://www.adobe.com/in/products/xd.html" target="_blank">
+                                 <img src="images/tech_logos/adobe_xd.png" />
+                                 <span>Adobe XD</span>
                                  </a>	
                               </li>
                            </ul>
