--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
                   </div>
                   <div class="section-txt-btn">
                      <p>
-                        <a class="btn btn-lg btn-border ripple" target="_blank" href="http://tiny.cc/u18amz">Download
+                        <a class="btn btn-lg btn-border ripple" target="_blank" href="https://drive.google.com/file/d/1UVjXqIvueofWoP3F2aGyqVEffwEYejI2/view">Download
                            Resume</a>
                      </p>
-                     <p>Hello friend! I’m a full stack developer mostly specialized in front end development.
-                        Experienced with all stages of the development cycle for dynamic web projects. Well-versed in
-                        numerous programming languages including JavaScript, Typescript, ReactJS, ReactNative, Java,
+                     <p>Greetings! I’m a full stack developer mostly specialized in front end development.
+                        Experienced with all stages of the development cycle on dynamic web, desktop and mobile applications. Well-versed in
+                        numerous skills including JavaScript, Typescript, ReactJS, ReactNative, Java,
                         Android. Strong background in coding, leading and project management.</p>
                   </div>
                </div>
@@ -241,7 +241,7 @@
                                  <span class="bar-title">JavaScript</span>
                               </div>
                               <div class="bar-line">
-                                 <span class="bar-fill" data-width="75%" style="width: 75%;"></span>
+                                 <span class="bar-fill" data-width="80%" style="width: 80%;"></span>
                               </div>
                            </div>
                         </div>
@@ -251,7 +251,7 @@
                                  <span class="bar-title">HTML &amp; CSS</span>
                               </div>
                               <div class="bar-line">
-                                 <span class="bar-fill" data-width="70%" style="width: 70%;"></span>
+                                 <span class="bar-fill" data-width="75%" style="width: 75%;"></span>
                               </div>
                            </div>
                         </div>
@@ -273,7 +273,7 @@
                                  <span class="bar-title">ReactJS &amp; React Native</span>
                               </div>
                               <div class="bar-line">
-                                 <span class="bar-fill" data-width="80%" style="width: 80%;"></span>
+                                 <span class="bar-fill" data-width="90%" style="width: 90%;"></span>
                               </div>
                            </div>
                         </div>
@@ -285,7 +285,7 @@
                                  <span class="bar-title">ES &amp; Typescript</span>
                               </div>
                               <div class="bar-line">
-                                 <span class="bar-fill" data-width="75%" style="width: 75%;"></span>
+                                 <span class="bar-fill" data-width="85%" style="width: 85%;"></span>
                               </div>
                            </div>
                         </div>
@@ -315,7 +315,7 @@
                               <h4 class="service-sub-title">Research and Development</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>I do a lot of research and more learning curve is required for modern front end
+                                 <p>I do a lot of research, since more learning curve is required for modern front end
                                     development.</p>
                               </div>
                            </div>
@@ -327,8 +327,8 @@
                               <h4 class="service-sub-title">UI/UX design, Scaffold project</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>Prototyping the project is like choosing the correct ingredients to cook. So before
-                                    cooking, i like to be in the discussions of the recipe along with my team.</p>
+                                 <p>Prototyping the project is like choosing the correct ingredients for cooking. So before
+                                    cooking, i will always be an essential member in the team to discuss and make it better.</p>
                               </div>
                            </div>
                         </div>
@@ -339,9 +339,9 @@
                               <h4 class="service-sub-title">Web, MobileApp, Desktop</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>I don't jump into code before deciding what we need to develop, i believe that
-                                    quality of the development is about how we craft it. To achieve that i do continues
-                                    code reviews, implement test cases and peer discussions.</p>
+                                 <p>Not a one who jumps into the code before deciding what needs to be developed, i believe that
+                                    quality of the development is about how we craft it. To achieve that i do proper algos, implement test cases, benchmarkings, continues
+                                    code reviews and peer discussions.</p>
                               </div>
                            </div>
                         </div>
@@ -354,9 +354,7 @@
                               <h4 class="service-sub-title">Test, Build</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>Do some development, build, test, distribute the build (do it daily). But why we
-                                    need to do the same process daily? So i like to automate by scripting or with the
-                                    help of automation tools.</p>
+                                 <p>Do some development, build, test, distribute the build manually (do it daily). Wait! We still have a lot of other manual works to do, I am a kind of developer who thinks about stopping the manual routines by automating stuffs with scripts or making use of automation tools.</p>
                               </div>
                            </div>
                         </div>
@@ -367,9 +365,7 @@
                               <h4 class="service-sub-title">Version Management & Distribution</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>Manual build distributions requires dependencies and manual efforts (again the
-                                    regular routine). So i distribute builds by making use of stable build distribution
-                                    tools. </p>
+                                 <p>Made use of stable build distribution tools integrated with development environment to help QA, UX Designers & Stake holders.</p>
                               </div>
                            </div>
                         </div>
@@ -380,9 +376,8 @@
                               <h4 class="service-sub-title">Branching Strategies</h4>
                               <div class="service-cont">
                                  <hr>
-                                 <p>I make my efforts to maintain and ensure the proper structure of branches,
-                                    environments, features, fixes & pull requests. These are very necessary to make good
-                                    of use of a version control system.</p>
+                                 <p>I make my efforts to maintain the version control system better by ensuring the proper branching strategies,
+                                    environments, features, fixes & pull requests, tags and made use of necessary plugins.</p>
                               </div>
                            </div>
                         </div>
@@ -431,6 +426,12 @@
                                  <span>JavaScript</span>
                               </a>
                            </li>
+                           <li>
+                              <a href="https://tailwindcss.com" target="_blank">
+                                 <img src="images/tech_logos/tailwind_logo.png" />
+                                 <span>Tailwind CSS</span>
+                              </a>
+                           </li>
                         </ul>
                         <ul class="interests-list">
                            <li>
@@ -457,6 +458,12 @@
                                  <span>Adobe XD</span>
                               </a>
                            </li>
+                           <li>
+                              <a href="https://www.figma.com" target="_blank">
+                                 <img src="images/tech_logos/figma_logo.png" />
+                                 <span>Figma</span>
+                              </a>
+                           </li>       
                         </ul>
                      </div>
                      <div id="back-end" class="animate-up">
@@ -464,9 +471,48 @@
                         <h4>Back End</h4>
                         <ul class="interests-list">
                            <li>
+                              <a href="https://nodejs.org/" target="_blank" title="NodeJs">
+                                 <img src="images/tech_logos/nodejs.png" />
+                                 <span>NodeJs</span>
+                              </a>
+                           </li>
+                           <li>
+                              <a href="https://nestjs.com/" target="_blank" title="NestJS">
+                                 <img src="images/tech_logos/nestJS_logo.png" />
+                                 <span>NestJS</span>
+                              </a>
+                           </li>
+                           <li>
+                              <a href="https://www.java.com" target="_blank" title="Java">
+                                 <img src="images/tech_logos/java.png" />
+                                 <span>Java</span>
+                              </a>
+                              <li>
+                                 <a href="https://www.mysql.com/" target="_blank" title="MySQL">
+                                    <img src="images/tech_logos/mySQL.png" />
+                                    <span>MySQL</span>
+                                 </a>
+                              </li>
+                              <li>
+                                 <a href="https://www.mongodb.com" target="_blank" title="MongoDB">
+                                    <img src="images/tech_logos/mongodb.jpg" />
+                                    <span>MongoDB</span>
+                                 </a>
+                              </li>
+                           </li>
+                        </ul>
+                        <ul class="interests-list">
+
+                           <li>
                               <a href="http://www.php.net/" target="_blank">
                                  <img src="images/tech_logos/php.png" />
                                  <span>Php</span>
+                              </a>
+                           </li>
+                           <li>
+                              <a href="https://codeigniter.com" target="_blank" title="CodeIgniter">
+                                 <img src="images/tech_logos/codeigniter.png" />
+                                 <span>CodeIgniter</span>
                               </a>
                            </li>
                            <li>
@@ -485,44 +531,6 @@
                               <a href="https://magento.com" target="_blank" title="Magento">
                                  <img src="images/tech_logos/magento.png" />
                                  <span>Magento</span>
-                              </a>
-                           </li>
-                        </ul>
-                        <ul class="interests-list">
-                           <li>
-                              <a href="https://www.java.com" target="_blank" title="Java">
-                                 <img src="images/tech_logos/java.png" />
-                                 <span>Java</span>
-                              </a>
-                           </li>
-                           <li>
-                              <a href="https://codeigniter.com" target="_blank" title="CodeIgniter">
-                                 <img src="images/tech_logos/codeigniter.png" />
-                                 <span>CodeIgniter</span>
-                              </a>
-                           </li>
-                           <li>
-                              <a href="https://www.mysql.com/" target="_blank" title="MySQL">
-                                 <img src="images/tech_logos/mySQL.png" />
-                                 <span>MySQL</span>
-                              </a>
-                           </li>
-                        </ul>
-                     </div>
-                     <div id="hands-on" class="animate-up">
-                        <br />
-                        <h4>Hands on</h4>
-                        <ul class="interests-list">
-                           <li>
-                              <a href="https://nodejs.org/" target="_blank" title="NodeJs">
-                                 <img src="images/tech_logos/nodejs.png" />
-                                 <span>NodeJs</span>
-                              </a>
-                           </li>
-                           <li>
-                              <a href="https://www.mongodb.com" target="_blank" title="MongoDB">
-                                 <img src="images/tech_logos/mongodb.jpg" />
-                                 <span>MongoDB</span>
                               </a>
                            </li>
                         </ul>
@@ -547,9 +555,11 @@
                                     target="_blank" title="Walmart Global Tech India">
                                     <img class="active" src="images/companies/walmart.png">
                                  </a>
-                                 <h4>SSE - IN4</h4>
+                                 <h4>Technical lead (SSE - IN4)</h4>
                               </div>
-                              <p style="text-align: center">Working With Sam's Club - Membership & Marketing
+                              <p style="text-align: center">
+                                 (2020 - 2021) Sam's Club - Membership & Marketing, Safety & Emergency mobile application
+                                 (2021 - Till) Campus (Mobile & Desktop) - One place for all the associate engagements.
                               </p>
                            </div>
                         </div>
@@ -566,12 +576,12 @@
                                  </a>
                                  <h4>Senior Technical lead</h4>
                               </div>
-                              <p style="text-align: center">Working for the client<br />
+                              <p style="text-align: center">Worked for the client<br />
                                  <a class="img" href="https://www.lowes.com/" target="_blank" title="LOWE'S">
                                     <img src="images/companies/lowes.png">
                                  </a>
                               </p>
-                              <p>Involved in developing the application hub for inbound supply chain management</p>
+                              <p>Involved in the application development for inbound supply chain management and merchandise areas.</p>
                               <div class="skills"><span>Skills</span> - ReactJS, NodeJs</div>
                            </div>
                         </div>
@@ -588,13 +598,13 @@
                                  </a>
                                  <h4>Technical Lead</h4>
                               </div>
-                              <p style="text-align: center">Working as a front end lead for the product<br />
+                              <p style="text-align: center">Worked as a front end lead for the product<br />
                                  <a class="img" href="https://wiowireless.com/" target="_blank" title="Wio Wireless">
                                     <img class="img" src="images/companies/wio.png">
                                  </a>
                               </p>
                               <p>Lead the frontend team to build wio cloud central web application for administration
-                                 and product management.</p>
+                                 and product management using React.</p>
                               <p><a href="https://play.google.com/store/apps/details?id=com.wio&hl=en_IN"
                                     target="_blank">WIO Wi-Fi <i class="fab fa-google-play"
                                        style="color: #00F076"></i></a> - Built mobile application for the end users in
@@ -667,7 +677,7 @@
                                  </a>
                                  <h4>Java Software Engineer</h4>
                               </div>
-                              <p>Worked on issues fixings in the financial product calypso software.</p>
+                              <p>This company is acquired and merged with Adenza, here I worked on enhancements & issues fixings over the financial product.</p>
                               <div class="skills"><span>Skills</span> - Java</div>
                            </div>
                         </div>
@@ -783,6 +793,15 @@
                <div class="animate-up">
                   <h2 class="section-title">Awards and Achievements</h2>
                   <div class="section-box">
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <p></p>
+                           <h3>Bravo Award (2022)</h3>
+                           <p> Received this award for Operational Excellence from Walmart Global Tech India.</p>
+                           <p></p>
+                        </div>
+                     </div>
+                     <hr />
                      <div class="row">
                         <div class="col-sm-12">
                            <p></p>
