refactor: 💡 Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -558,8 +558,10 @@
                                  <h4>Technical lead (SSE - IN4)</h4>
                               </div>
                               <p style="text-align: center">
-                                 (2020 - 2021) Sam's Club - Membership & Marketing, Safety & Emergency mobile application
-                                 (2021 - Till) Campus (Mobile & Desktop) - One place for all the associate engagements.
+                              (2021 - Till) Campus (Mobile & Desktop) - An app for all the associate engagements.
+                              </p>
+                              <p style="text-align: center">
+                                 (2020 - 2021) Sam's Club - Membership & Marketing, Safety & Emergency mobile applications.
                               </p>
                            </div>
                         </div>
