--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                               <ul class="profile-list">
                                  <li class="clearfix">
                                     <strong class="title">Age</strong>
-                                    <span class="cont">29</span>
+                                    <span class="cont" id="age">32</span>
                                  </li>
                                  <li class="clearfix">
                                     <strong class="title">Address</strong>
@@ -719,6 +719,21 @@
                               </p>
                            </div>
                         </div>
+                     </div>
+                  </div>
+                  <br/><br/>
+                  <h2 class="section-title">Personal Works</h2>
+                  <div class="section-box">
+                     <div class="row">
+                           <a href="https://itsallwidgets.com/ipl-trump-cards" target="_blank" title="IPL Trump Cards">
+                              IPL Trump Cards - Game (Made in ❤️ with Flutter)
+                           </a>
+                     </div>
+                     <br/>
+                     <div class="row">
+                        <a href="https://theperfectblenders.com" target="_blank" title="IPL Trump Cards">
+                           The Perfect Blenders
+                        </a>
                      </div>
                   </div>
                </div>
