refactor: 💡 Updated title on personal works

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                      </div>
                      <br/>
                      <div class="row">
-                        <a href="https://theperfectblenders.com" target="_blank" title="IPL Trump Cards">
+                        <a href="https://theperfectblenders.com" target="_blank" title="The Perfect Blenders">
                            The Perfect Blenders
                         </a>
                      </div>
