feat: 🎸 updated cv

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
                      </li>
                      <li id="menu-item-473"
                         class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
-                        <a href="#education">Education</a>
+                        <a href="#awards">Awards</a>
                      </li>
                      <li id="menu-item-474"
+                        class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
+                        <a href="#education">Education</a>
+                     </li>
+                     <li id="menu-item-475"
                         class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
                         <a href="#interests">Interests</a>
                      </li>
@@ -143,9 +147,13 @@
                                  </li>
                                  <li id="menu-item-473"
                                     class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
-                                    <a href="#education">Education</a>
+                                    <a href="#awards">Awards</a>
                                  </li>
                                  <li id="menu-item-474"
+                                    class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
+                                    <a href="#education">Education</a>
+                                 </li>
+                                 <li id="menu-item-475"
                                     class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home">
                                     <a href="#interests">Interests</a>
                                  </li>
@@ -224,9 +232,7 @@
                            Resume</a>
                      </p>
                      <p>Greetings! I’m a full stack developer mostly specialized in front end development.
-                        Experienced with all stages of the development cycle on dynamic web, desktop and mobile applications. Well-versed in
-                        numerous skills including JavaScript, Typescript, ReactJS, ReactNative, Java,
-                        Android. Strong background in coding, leading and project management.</p>
+                        Experienced with all stages of the development cycle on dynamic web, desktop and mobile applications. My extensive experience spans the architecture, implementation with strong background in coding, leading and project management.</p>
                   </div>
                </div>
             </section>
@@ -238,7 +244,7 @@
                         <div class="col-sm-6">
                            <div class="progress-bar">
                               <div class="bar-data">
-                                 <span class="bar-title">JavaScript</span>
+                                 <span class="bar-title">JavaScript and NodeJS</span>
                               </div>
                               <div class="bar-line">
                                  <span class="bar-fill" data-width="80%" style="width: 80%;"></span>
@@ -558,7 +564,7 @@
                                  <h4>Technical lead (SSE - IN4)</h4>
                               </div>
                               <p style="text-align: center">
-                              (2021 - Till) Campus (Mobile & Desktop) - An app for all the associate engagements.
+                                 (2021 - Till) Campus (Mobile & Desktop) - One application for all the associates to managing their onboarding, careers, finances, learnings, profile, team management and much more.
                               </p>
                               <p style="text-align: center">
                                  (2020 - 2021) Sam's Club - Membership & Marketing, Safety & Emergency mobile applications.
@@ -738,15 +744,42 @@
                   </div>
                </div>
             </section>
-            <section id="text_section" class="section section-text">
+            <section id="awards" class="section section-text">
                <div class="animate-up">
                   <h2 class="section-title">Awards and Achievements</h2>
                   <div class="section-box">
                      <div class="row">
                         <div class="col-sm-12">
                            <p></p>
+                           <h3>Bravo Award (2023)</h3>
+                           <p> 🚀 Received this award for Engineering Excellence from Walmart Global Tech India.</p>
+                           <p></p>
+                        </div>
+                     </div>
+                     <hr />
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <p></p>
                            <h3>Bravo Award (2022)</h3>
-                           <p> Received this award for Operational Excellence from Walmart Global Tech India.</p>
+                           <p> 🚀 Received this award for Operational Excellence from Walmart Global Tech India</p>
+                           <p></p>
+                        </div>
+                     </div>
+                     <hr />
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <p></p>
+                           <h3>Bravo Award (2022)</h3>
+                           <p> 🚀 Received this award for Operational Excellence from Walmart Global Tech India</p>
+                           <p></p>
+                        </div>
+                     </div>
+                     <hr />
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <p></p>
+                           <h3>Team Award (2022)</h3>
+                           <p> 🤝 For exceptional team performance from Walmart Global Tech India.</p>
                            <p></p>
                         </div>
                      </div>
@@ -755,7 +788,7 @@
                         <div class="col-sm-12">
                            <p></p>
                            <h3>Best Performer (2018 -2019)</h3>
-                           <p> Received spark award for work performance from Infinite Computer Solutions.</p>
+                           <p> 🚀 Received spark award for work performance from Infinite Computer Solutions.</p>
                            <p></p>
                         </div>
                      </div>
